Dynamic-access coverage for io.micrometer.core.instrument.binder.jvm.ExecutorServiceMetrics (10/16)